# ft_ls

./: CMakeLists.txt  Makefile  README.md  ft_ls
inc/: ft_ls.h
src/: attribs.c  dir_sort.c  dirs.c  errors.c  files.c  flags.c  ft_show_listed.c  ft_show_simple.c  main.c  memory.c  miniprintf.c  modify.c  padding.c  padding2.c  processes.c  query.c  recursion.c  show.c  show_listed.c  sort.c  sort2.c  sorting.c  stuff.c  utils.c
