cmake_minimum_required(VERSION 3.9)
project(ft_ls2)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_ls2
        inc/ft_ls.h
        lib/libft/ft_atoi.c
        lib/libft/ft_bzero.c
        lib/libft/ft_elems.c
        lib/libft/ft_is_prime.c
        lib/libft/ft_is_sort.c
        lib/libft/ft_isalnum.c
        lib/libft/ft_isalpha.c
        lib/libft/ft_isascii.c
        lib/libft/ft_isdigit.c
        lib/libft/ft_isprint.c
        lib/libft/ft_itoa.c
        lib/libft/ft_lstadd.c
        lib/libft/ft_lstdel.c
        lib/libft/ft_lstdelone.c
        lib/libft/ft_lstiter.c
        lib/libft/ft_lstmap.c
        lib/libft/ft_lstnew.c
        lib/libft/ft_memalloc.c
        lib/libft/ft_memccpy.c
        lib/libft/ft_memchr.c
        lib/libft/ft_memcmp.c
        lib/libft/ft_memcpy.c
        lib/libft/ft_memdel.c
        lib/libft/ft_memmove.c
        lib/libft/ft_memset.c
        lib/libft/ft_numlen.c
        lib/libft/ft_putchar.c
        lib/libft/ft_putchar_fd.c
        lib/libft/ft_putendl.c
        lib/libft/ft_putendl_fd.c
        lib/libft/ft_putnbr.c
        lib/libft/ft_putnbr_fd.c
        lib/libft/ft_putstr.c
        lib/libft/ft_putstr_fd.c
        lib/libft/ft_recursive_power.c
        lib/libft/ft_sqrt.c
        lib/libft/ft_strcat.c
        lib/libft/ft_strchr.c
        lib/libft/ft_strclr.c
        lib/libft/ft_strcmp.c
        lib/libft/ft_strcpy.c
        lib/libft/ft_strdel.c
        lib/libft/ft_strdup.c
        lib/libft/ft_strequ.c
        lib/libft/ft_striter.c
        lib/libft/ft_striteri.c
        lib/libft/ft_strjoin.c
        lib/libft/ft_strjoin_free.c
        lib/libft/ft_strlcat.c
        lib/libft/ft_strlen.c
        lib/libft/ft_strmap.c
        lib/libft/ft_strmapi.c
        lib/libft/ft_strncat.c
        lib/libft/ft_strncmp.c
        lib/libft/ft_strncpy.c
        lib/libft/ft_strnequ.c
        lib/libft/ft_strnew.c
        lib/libft/ft_strnstr.c
        lib/libft/ft_strrchr.c
        lib/libft/ft_strsplit.c
        lib/libft/ft_strstr.c
        lib/libft/ft_strsub.c
        lib/libft/ft_strtrim.c
        lib/libft/ft_swap.c
        lib/libft/ft_swapch.c
        lib/libft/ft_tolower.c
        lib/libft/ft_toupper.c
        lib/libft/ft_two_del.c
        lib/libft/get_next_line.c
        lib/libft/get_next_line.h
        lib/libft/libft.h
        src/dirs.c
        src/errors.c
        src/files.c
        src/flags.c
        src/main.c
        src/memory.c
        src/padding.c
        src/query.c
        src/recursion.c
        src/show.c
        src/show_listed.c
        src/sort.c
        src/stuff.c src/sort2.c src/padding2.c)
